--- a/style.css
+++ b/style.css
@@ -28,17 +28,21 @@ body {
     align-items: center;
     min-height: 100vh;
     background: var(--bg-color);
+    color: var(--text-color);
 }
 
 .wrapper {
     position: relative;
     width: 66rem;
     height: 39rem;
+    padding: 2rem;
     /* background: red; */
 }
 
 .cover {
     position: absolute;
+    top: 0;
+    left: 0;
     width: 50%;
     height: 100%;
     background: var(--cover-color);
@@ -54,4 +58,32 @@ body {
 
 .cover.cover-right.turn {
     transform: rotateY(180deg);
+}
+
+.book {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+.book.book-page {
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    background: var(--pages-color);
+    box-shadow: 0 0 .6rem rgba(0,0,0,.1);
+    display: flex;
+    padding: 2rem;
+}
+
+.profile-page {
+    background: seagreen;
+}
+
+.profile-page img {
+    max-width: 180px;
+    border-radius: 50%;
+    border: .25rem solid var(--main-color);
+    margin-bottom: .8rem;
 }
