--- a/style.css
+++ b/style.css
@@ -36,7 +36,6 @@ body {
     width: 66rem;
     height: 39rem;
     padding: 2rem;
-    /* background: red; */
 }
 
 .cover {
@@ -48,7 +47,7 @@ body {
     background: var(--cover-color);
     box-shadow: var(--box-shadow);
     border-top-left-radius: .6rem;
-    border-top-right-radius: .6rem;
+    border-bottom-left-radius: .6rem;
     transform-origin: right;
 }
 
@@ -67,7 +66,7 @@ body {
     display: flex;
 }
 
-.book.book-page {
+.book .book-page{
     position: absolute;
     width: 50%;
     height: 100%;
@@ -78,12 +77,87 @@ body {
 }
 
 .profile-page {
-    background: seagreen;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .profile-page img {
-    max-width: 180px;
+    max-width: 150px;
     border-radius: 50%;
     border: .25rem solid var(--main-color);
     margin-bottom: .8rem;
+}
+
+.profile-page h1 {
+    font-size: 2.3rem;
+    line-height: 1;
+}
+
+.profile-page h3 {
+    font-size: 1.3rem;
+    color: var(--main-color);
+}
+
+.profile-page .social-media {
+    margin: .6rem 0 .8rem;
+}
+
+.profile-page .social-media a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 2.5rem;
+    height: 2.5rem;
+    background: transparent;
+    border: var(--border);
+    border-radius: 40px;
+    font-size: 1.5rem;
+    color: var(--main-color);
+    margin: 0 .2rem;
+    transition: .5s;
+}
+
+.profile-page .social-media a :hover {
+    background: var(--main-color);
+    color: var(--white-color);
+}
+
+.profile-page p {
+    text-align: justify;
+}
+
+.profile-page .btn-box {
+    margin-top: 1.2rem;
+}
+
+.btn {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 9.5rem;
+    height: 2.5rem;
+    background: var(--main-color);
+    border: var(--border);
+    border-radius: .3rem;
+    font-size: 1rem;
+    color: var(--white-color);
+    font-weight: 500;
+    margin: 0 1rem;
+    transition: .5s
+}
+
+.btn:hover {
+    background: transparent;
+    color: var(--main-color);
+}
+
+.btn-box .btn:nth-child(2) {
+    background: transparent;
+    color: var(--main-color);
+}
+.btn-box .btn:nth-child(2):hover {
+    background: var(--main-color);
+    color: var(--white-color);
 }
