--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ body {
     transition: .5s;
 }
 
-.profile-page .social-media a :hover {
+.profile-page .social-media a:hover {
     background: var(--main-color);
     color: var(--white-color);
 }
@@ -256,4 +256,41 @@ body {
 
 .nextprev-btn.back {
     left: 1.5rem;
+}
+
+.services-box {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.services-box .services-content {
+    flex: 1 1 10rem;
+    border: var(--border);
+    border-radius: .5rem;
+    padding: .8rem .5rem 1.1rem;
+    text-align: center;
+    transition: .3s ease;
+}
+
+.services-box .services-content:hover {
+    box-shadow: var(--box-shadow);
+}
+
+.services-content i {
+    font-size: 2.2rem;
+    color: var(--main-color);
+}
+
+.services-content h3 {
+    font-size: .9rem;
+}
+
+.services-content p {
+    font-size: .7rem;
+}
+
+.services-content .btn {
+    width: 8rem;
+    height: 1.8rem;
 }
