--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
     min-height: 100vh;
     background: var(--bg-color);
     color: var(--text-color);
+    overflow: hidden;
 }
 
 .wrapper {
@@ -36,6 +37,19 @@ body {
     width: 66rem;
     height: 39rem;
     padding: 2rem;
+    perspective: 250rem;
+    animation: show-animate 2s forwards;
+}
+
+@keyframes show-animate {
+    0%,30% {
+        opacity: 0;
+        transform: rotate(-20deg);
+    }
+    100% {
+        opacity: 1;
+        transform: rotate(0deg);
+    }
 }
 
 .cover {
@@ -55,6 +69,11 @@ body {
     z-index: -1;
 }
 
+.cover.cover-right {
+    z-index: 100;
+    transition: transform 1s cubic-bezier(.645, .045, .355, 1);
+}
+
 .cover.cover-right.turn {
     transform: rotateY(180deg);
 }
@@ -64,6 +83,7 @@ body {
     width: 100%;
     height: 100%;
     display: flex;
+    perspective: 250rem;
 }
 
 .book .book-page{
@@ -74,6 +94,10 @@ body {
     box-shadow: 0 0 .6rem rgba(0,0,0,.1);
     display: flex;
     padding: 2rem;
+}
+
+.book-page.page-left {
+    box-shadow: -.6rem .6rem rgba(0,0,0,.1);
 }
 
 .profile-page {
@@ -167,6 +191,7 @@ body {
     right: 0;
     transform-style: preserve-3d;
     transform-origin: left;
+    transition: transform 1s cubic-bezier(.645, .045, .355, 1);
 }
 
 .book-page.page-right.turn {
@@ -403,3 +428,68 @@ body {
     margin: 0 1.15rem;
 }
 
+.contact-box {
+    text-align: center;
+}
+
+.contact-box .field {
+    width: 100%;
+    background: transparent;
+    border: var(--border);
+    border-radius: .3rem;
+    padding: .8rem;
+    font-size: 1rem;
+    color: var(--text-color);
+    margin-bottom: 1.2rem;
+}
+
+.contact-box .field::placeholder {
+    color: var(--text-color);
+}
+
+.contact-box textarea {
+    resize:  none;
+    height: 12rem;
+}
+
+.contact-box .btn {
+    cursor: pointer;
+}
+
+.back-profile {
+    position: absolute;
+    bottom: 1.2rem;
+    right: 2rem;
+    width: 2rem;
+    height: 2rem;
+    background: transparent;
+    border: var(--border);
+    border-radius: .3rem;
+    font-size: 1.1rem;
+    color: var(--main-color);
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    transition: .5s;
+}
+
+.back-profile:hover {
+    background: var(--main-color);
+    color: var(--white-color);
+}
+
+.back-profile p {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%) scale(.5);
+    font-size: 1rem;
+    opacity: 0;
+    color: var(--main-color);
+}
+
+.back-profile p:hover {
+    opacity: 1;
+    transform: translateX(-50%) scale(1);
+    top: -1.8rem;
+}
